<resources>
    <string name="app_name">My Application demo</string>
    <string name="action_settings">Settings</string>
    <string name="gmail">Gmail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_gaana">Welcome to gaana</string>
    <string name="name">NAME</string>
    <string name="lastname">lastname</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="registration">Register</string>
    <string name="registration_form">Registration form</string>
    <string name="title_activity_navidraw">navidraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navi">navi</string>
</resources>
