<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/mu"
    android:layout_gravity="center"
    android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/welcome_to_gaana"
        android:gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="cursive"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:textSize="30dp"
            android:layout_margin="5dp"
            android:fontFamily="cursive"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter gmail"
            android:textSize="20dp"
            android:inputType="textEmailAddress"
            android:fontFamily="cursive"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="30dp"
            android:layout_margin="5dp"
            android:fontFamily="cursive"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="enter password"
            android:textSize="20dp"
            android:inputType="textPassword"
            android:fontFamily="cursive"
            />


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30dp"
        android:layout_margin="30dp"
        android:background="@drawable/bg"
        android:fontFamily="cursive"/>
</LinearLayout>